--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,14 @@
         </dependency>
 
         <dependency>
+            <groupId>net.gtaun.wl</groupId>
+            <artifactId>wl-language</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <type>jar</type>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.30</version>
