--- a/pom.xml
+++ b/pom.xml
@@ -24,18 +24,18 @@
     </repositories>
 
 
-    <distributionManagement>
-        <repository>
-            <id>gtaun-repo-releases</id>
-            <name>GTAUN Release Repository</name>
-            <url>http://repo.gtaun.net/content/repositories/releases</url>
-        </repository>
-        <snapshotRepository>
-            <id>gtaun-repo-snapshots</id>
-            <name>GTAUN Snapshot Repository</name>
-            <url>http://repo.gtaun.net/content/repositories/snapshots</url>
-        </snapshotRepository>
-    </distributionManagement>
+	<distributionManagement>
+		<repository>
+			<id>deployment</id>
+			<name>Releases</name>
+			<url>http://repo.gtaun.net/content/repositories/releases/</url>
+		</repository>
+		<snapshotRepository>
+			<id>deployment</id>
+			<name>Snapshots</name>
+			<url>http://repo.gtaun.net/content/repositories/snapshots/</url>
+		</snapshotRepository>
+	</distributionManagement>
 
     <dependencies>
         <dependency>
